feat: migrate to JDK 17
Drop Java 21 runtime to 17 across pom (java.version + enforcer), Dockerfile
(temurin 17) and CI. Replace Java 21 APIs: List.getFirst()->get(0),
virtual threads (Thread.ofVirtual/startVirtualThread) with daemon threads,
List.getLast() with index access.